Added some basic HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>METEO</title>
+    <title>Weather forecast</title>
+    <link rel="icon" type="image/x-icon" href="sources/sun.svg">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>MÉTÉO</h1>
+      <form>
+        <input type="search" placeholder="Enter a city.." required/>
+        <input type="submit" value="Search"/>
+      </form>
+    </header>
+    <main>
+      <h1>Lyon</h1>
+      <p>Humidity: 66%, Wind: 3.13km/h</p>
+      <p>Tuesday, 15:05
+      </br>
+      25°C</p>
+    </main>
+    <footer>
+       <p>This is an <a href="https://github.com/masha-smkh23/SheCodes-project" target="_blank">open-source project</a> hosted on <a href="https://www.netlify.com/" target="_blank">Netlify</a></p>
+    </footer>
+  </body>
 </html>
