--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=Cantora+One&family=Mooli&display=swap" rel="stylesheet">
     <title>Weather forecast</title>
-    <link rel="icon" type="image/x-icon" href="sources/sun.svg">
+    <link rel="icon" type="image/x-icon" href="sources/sun.svg"/>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
+    <div class="weather-window">
     <header>
       <h1>MÉTÉO</h1>
       <form>
@@ -24,5 +29,6 @@
     <footer>
        <p>This is an <a href="https://github.com/masha-smkh23/SheCodes-project" target="_blank">open-source project</a> hosted on <a href="https://www.netlify.com/" target="_blank">Netlify</a></p>
     </footer>
+    </div>
   </body>
 </html>
