added a footer and removed previous css

--- a/index.html
+++ b/index.html
@@ -3,32 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=Cantora+One&family=Mooli&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=Cantora+One&family=Mooli&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather forecast</title>
-    <link rel="icon" type="image/x-icon" href="sources/sun.svg"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="icon" type="image/x-icon" href="sources/sun.svg" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="weather-window">
-    <header>
-      <h1>MÉTÉO</h1>
-      <form>
-        <input type="search" placeholder="Enter a city.." required/>
-        <input type="submit" value="Search"/>
-      </form>
-    </header>
-    <main>
-      <h1>Lyon</h1>
-      <p>Humidity: 66%, Wind: 3.13km/h</p>
-      <p>Tuesday, 15:05
-      </br>
-      25°C</p>
-    </main>
-    <footer>
-       <p>This is an <a href="https://github.com/masha-smkh23/SheCodes-project" target="_blank">open-source project</a> hosted on <a href="https://www.netlify.com/" target="_blank">Netlify</a></p>
-    </footer>
+      <header>
+        <h1>MÉTÉO</h1>
+        <form>
+          <input type="search" placeholder="Enter a city.." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Rotterdam</h1>
+          <p>
+            Humidity: 66%, Wind: 3.13km/h
+            <br />
+            Tuesday, 15:05
+          </p>
+        </div>
+        <div>🌤️ 25°C</div>
+      </main>
+      <footer>
+        <p>
+          This
+          <a href="https://github.com/masha-smkh23/METEO" target="_blank"
+            >open-source project</a
+          >
+          is coded by
+          <a
+            href="https://www.shecodesfoundation.org/candidates/mariia-samokhvalova-ukrainian"
+            target="_blank"
+            >Mariia S.</a
+          >
+          & hosted on
+          <a href="https://www.netlify.com/" target="_blank">Netlify</a>
+        </p>
+      </footer>
     </div>
   </body>
 </html>
