--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@100..800&family=Cantora+One&family=Mooli&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Quick Check</title>
     <link rel="icon" type="image/x-icon" href="src/sun.svg" />
     <link rel="stylesheet" href="src/styles.css" />
