updated handleSearch with weather API

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city" id="city-display">Rotterdam</h1>
+            <h1 class="weather-app-city" id="city-display"></h1>
             <p class="weather-app-details">
               Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
               <br />
@@ -41,7 +41,7 @@
           </div>
           <div class="weather-app-temperature">
             <div class="weather-icon">🌤️</div>
-            <div class="weather-value">25</div>
+            <div class="weather-value" id="temperature-value">25</div>
             <div class="weather-unit">°C</div>
           </div>
         </div>
