injected more weather api data

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <div>
             <h1 class="weather-app-city" id="city-display"></h1>
             <p class="weather-app-details">
-              Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
               <br />
-              Tuesday, 15:05
+              <span id="time">Tuesday 15:05 </span> <span id="description">scattered clouds</span>
             </p>
           </div>
           <div class="weather-app-temperature">
