icon update in progress

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             </p>
           </div>
           <div class="weather-app-temperature">
-            <div class="weather-icon">🌤️</div>
+            <div id="icon">
+              <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-day.png" class="weather-icon"/>
+            </div>
             <div class="weather-value" id="temperature-value">25</div>
             <div class="weather-unit">°C</div>
           </div>
