new icon in the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Quick Check</title>
-    <link rel="icon" type="image/x-icon" href="src/sun.svg" />
+    <link rel="icon" type="image/x-icon" href="src/cloud-icon.svg" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -56,7 +56,7 @@
           >
           is coded by
           <a
-            href="https://www.shecodesfoundation.org/candidates/mariia-samokhvalova-ukrainian"
+            href="https://github.com/masha-smkh23"
             target="_blank"
             >Mariia S.</a
           >
